# ORC-OS

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: report.md
.github/workflows/: release.yml  tests.yml
dashboard/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  webpack.config.js
dashboard/public/fonts/: barlow.css
dashboard/src/: App.css  App.jsx  api.js  main.jsx  messageBox.jsx  messageContext.jsx  proj-db.json
dashboard/src/api/: api.js  authApi.jsx
dashboard/src/auth/: authProvider.jsx  useAuth.jsx
dashboard/src/nav/: Footer.css  Footer.jsx  Navbar.css  Navbar.jsx  optionsMenu.jsx  passwordChangeModal.jsx
dashboard/src/utils/: apiCalls.jsx  cameraConfigUtils.js  codeBlock.jsx  computerVision.js  deepMerge.js  dropdownMenu.jsx  filterDates.css  filterDates.jsx  frameControls.jsx  helpers.jsx  images.jsx  leafletUtils.js  paginate.jsx
dashboard/src/utils/apiCalls/: callbackUrl.jsx  crossSection.jsx  timeSeries.jsx  update.jsx  video.jsx  videoConfig.jsx
dashboard/src/views/: calibration.css  calibration.jsx  callbackUrl.jsx  cameraAim.css  cameraAim.jsx  cameraAim.scss  device.jsx  deviceForm.jsx  diskManagement.jsx  home.jsx  listCrossSection.jsx  listRecipe.jsx  listVideo.jsx  log.jsx  login.jsx  message.jsx  protectedRoute.jsx  settings.jsx  timeSeries.jsx  updates.css  updates.jsx  videoConfig.jsx  waterLevel.jsx
dashboard/src/views/VideoConfigComponents/: VideoConfigForm.jsx  cameraConfigForm.jsx  crossSectionDisplay.jsx  crossSectionForm.jsx  crossSectionUploadModal.jsx  poseDetails.jsx  sideView.jsx  topView.jsx
dashboard/src/views/calibrationTabs/: XyzWidget.jsx  cameraParameters.jsx  controlPanel.jsx  controlPointsTab.jsx  mapTab.jsx  photoComponent.css  photoComponent.jsx  videoTab.jsx  widget.css
dashboard/src/views/callbackUrlComponents/: serverStatus.jsx
dashboard/src/views/crossSectionComponents/: crossSectionForm.jsx  paginatedCrossSections.jsx
dashboard/src/views/recipeComponents/: paginatedRecipes.jsx  recipeComponents.css  recipeForm.jsx
dashboard/src/views/services/: ParameterForm.jsx  (+4 more)
nodeorc_api/: __init__.py  database.py  main.py  utils.py
nodeorc_api/crud/: __init__.py  callback_url.py  camera_config.py  device.py  disk_management.py  settings.py  video.py  water_level.py
nodeorc_api/routers/: callback_url.py  camera_config.py  device.py  disk_management.py  pivideo.py  pivideo_stream.py  settings.py  video.py  video_stream.py  water_level.py
nodeorc_api/schemas/: __init__.py  callback_url.py  camera_config.py  device.py  disk_management.py  settings.py  time_series.py  video.py  water_level.py
orc_api/: __init__.py  alembic.ini  celery_app.py  celery_tasks.py  database.py  log.py  main.py  schedulers.py
orc_api/alembic/: env.py
orc_api/alembic/versions/: 1e2f8592d51d_set_video_config_id_null_in_video_on_.py  2374087cd4d0_password_table.py  3b7b3a2b8d08_initial_migration.py  589efafcb60f_remove_home_folder_from_disk_management.py  b084946ad874_move_remote_site_id_to_callback_url_.py  b8cc02017430_custom_service_and_service_parameter.py  cdad732405a1_callback_url_column_for_max_timeout.py  e5328ed85676_water_level_enabled_disabled_option.py  fb118712a136_make_h_optional_in_time_series.py
orc_api/cli/: __init__.py  db.py  main.py  misc.py  service.py  video.py
orc_api/crud/: __init__.py  callback_url.py  camera_config.py  cross_section.py  device.py  disk_management.py  generic.py  login.py  recipe.py  service.py  settings.py  time_series.py  video.py  video_config.py  water_level.py
orc_api/db/: __init__.py  base.py  callback_url.py  camera_config.py  cross_section.py  device.py  disk_management.py  password.py  profile.py  recipe.py  service.py  settings.py  time_series.py  video.py  video_config.py  water_level_settings.py
orc_api/manifest/: __init__.py  manifest.py  perform_checks.py
orc_api/routers/: auth.py  callback_url.py  camera_config.py  control_points.py  cross_section.py  device.py  disk_management.py  log.py  pivideo_stream.py  recipe.py  security.py  service.py  settings.py  time_series.py  updates.py  video.py  video_config.py  video_stream.py  water_level.py
orc_api/routers/ws/: video.py  video_config.py
orc_api/schemas/: __init__.py  base.py  callback_url.py  camera_config.py  control_points.py  cross_section.py  device.py  disk_management.py  recipe.py  service.py  settings.py  time_series.py  updates.py  video.py  video_config.py  water_level.py
orc_api/utils/: auth_helpers.py  disk_management.py  image.py  io.py  queue.py  redis_pubsub.py  startup_checks.py  states.py  sys_utils.py  water_level.py  websockets.py
tests/: conftest.py
tests/test_alembic/: test_migrations.py
tests/test_celery/: test_celery_tasks.py
tests/test_cli/: test_cli.py
tests/test_crud/: conftest.py  test_recipe.py  test_service.py  test_time_series.py  test_video.py  test_water_level.py
tests/test_main/: test_lifespan.py
tests/test_routers/: conftest.py  test_auth_routers.py  test_callback_url.py  test_camera_config.py  test_control_points.py  test_cross_section_routers.py  test_cs_routers.py  test_device_routers.py  test_log_routers.py  test_pivideo_stream.py  test_service_routers.py  test_time_series_routers.py  test_updates_routers.py  test_video.py  test_video_config.py  test_video_routers.py  test_wl_settings.py
tests/test_schemas/: conftest.py  test_camera_config.py  test_camera_config_schemas.py  test_cross_section_schemas.py  test_disk_management_schemas.py  test_recipe_schemas.py  test_service_schemas.py  test_settings_schemas.py  test_time_series_schemas.py  test_video.py  test_video_config_schemas.py  test_video_schemas.py
tests/test_utils/: test_celery_app.py  test_celery_tasks.py  test_image_utils.py  test_io_utils.py  test_log.py  test_queue.py  test_redis.py  test_sys_utils.py
(+18 files in other folders)
