[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "orc_api"
authors = [
    {name = "Hessel Winsemius", email = "winsemius@rainbowsensing.com"},
]
dependencies = [
    "alembic",
    "apscheduler",
    "bcrypt",
    "fastapi[standard]",
    "pillow<=9.5.0; python_version == '3.9'",  # for compatibility with picamera2 on Bullseye
    "pillow; python_version != '3.9'",
    "rocket-fft @ git+https://github.com/styfenschaer/rocket-fft.git@main ; python_version == '3.13'",
    "rocket-fft; python_version != '3.13'",  # pypi for versions lower than 3.13
    "pydantic",
    "PyJWT",
    "pyopenrivercam>=0.8.10",
    "pyyaml",
    "rasterio<=1.3.11; python_version == '3.9'",  # for compatibility with GDAL version on Bullseye
    "rasterio; python_version != '3.9'",
    "sqlalchemy",
    "requests",
    "zipstream"
]
requires-python = ">=3.9" # fix tests to support older versions
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "License :: OSI Approved :: Image Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dynamic = ['version', 'description']

[project.optional-dependencies]
pi = ["picamera2"]
test = [
    "pooch",
	"pytest",
	"pytest-cov",
    "pytest-mock",
    "pytest-asyncio"
]

[project.urls]
Source = "https://github.com/localdevices/ORC-OS"

[tool.flit.sdist]
include = [
    "orc_api",
    "orc_api/alembic.ini",
    "orc_api/alembic/**/*.py",
    "orc_api/alembic/**/*.mako",
    "orc_api/alembicversion/*.py"
]
exclude = ["gcloud_dist", "hack", "helm", "htmlcov", "junit", "tests", ".github"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["docs", "alembic"]

[tool.ruff.lint]
# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT), bugbear (B)
select = ["E", "F", "I", "PT", "D", "B", "ICN", "TID"]
ignore = ["D211", "D213", "D206", "D400", "E741", "D105", "D203", "E712", "B904", "B905", "B008"]  # "E501" line length

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]
"orc_api/__init__.py" = ["E402", "F401", "F403"]
